--- a/api-gateway/src/main/resources/application.yml
+++ b/api-gateway/src/main/resources/application.yml
@@ -1,19 +1,8 @@
-server:
-  port: 8085
-
 spring:
-  application:
-    name: api-gateway
   cloud:
     gateway:
       routes:
         - id: student-service
-          uri: lb://STUDENT-SERVICE
+          uri: http://localhost:9090
           predicates:
-            - Path=/api/students/**
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
-
+            - Path=/students/**
