--- a/student-service/src/main/resources/application.properties
+++ b/student-service/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-spring.application.name=student-service
+spring.application.name=STUDENT-SERVICE
 server.port=9090
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
